# document_extraction_backend

./: .gitignore  Dockerfile  deploy.sh  dev  generate_cert.py  pyproject.toml  requirements.txt  run_https.py  setup.py  setup_aws_ssl.py  template.yaml  test.json
.aws-sam/: build.toml
app/: cleanup.py  config.py  main.py
app/config/: ssl_config.py
app/services/: __init__.py  aws_service.py  cleanup_service.py
app/utils/: __init__.py  file_validator.py  image_processing.py
lib/: aws_service.py  openai_client.py  secrets.py
public/: test2.json
src/: __init__.py
src/functions/: lambda_function.py
tests/: __init__.py  conftest.py  test_main.py
