[project]
name = "document-extraction-backend"
version = "0.1.0"
description = "Backend service for document extraction using AWS services"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.28.65",
    "Pillow>=9.0.0",
    "fastapi>=0.68.0",
    "python-multipart>=0.0.5"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
pip = ">=23.3.2" 